--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "com.myunitytools",
-  "version": "1.0.0",
-  "displayName": "My Unity Tools",
+  "name": "com.myunitytools.extensions",
+  "version": "1.1.0",
+  "displayName": "My Unity Tools - Extensions",
   "description": "A personal collection of Unity Engine tools, extensions and helpers.",
-  "unity": "2018.4",
-  "unityRelease": "0f1",
+  "unity": "2019.4",
   "keywords": [],
   "author": {
     "name": "Jo\u00e3o Borks",
