--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "com.myunitytools.extensions",
-  "version": "1.1.0",
-  "displayName": "My Unity Tools - Extensions",
+  "version": "1.2.0",
+  "displayName": "Extensions",
   "description": "A personal collection of Unity Engine tools, extensions and helpers.",
   "unity": "2019.4",
   "keywords": [],
   "author": {
-    "name": "Jo\u00e3o Borks",
+    "name": "My Unity Tools",
     "email": "joao.borks@gmail.com.br",
-    "url": "https://github.com/JoaoBorks"
+    "url": "https://github.com/myunitytools"
   },
   "hideInEditor": false,
   "dependencies": {
