--- a/Runtime/MyGameDevTools.Extensions.asmdef
+++ b/Runtime/MyGameDevTools.Extensions.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MyUnityTools.Extensions",
+    "name": "MyGameDevTools.Extensions",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
