--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "com.myunitytools.extensions",
-  "version": "1.2.0",
+  "name": "com.mygamedevtools.extensions",
+  "version": "1.3.0",
   "displayName": "Extensions",
   "description": "A personal collection of Unity Engine tools, extensions and helpers.",
   "unity": "2019.4",
   "keywords": [],
   "author": {
-    "name": "My Unity Tools",
+    "name": "My GameDev Tools",
     "email": "joao.borks@gmail.com.br",
-    "url": "https://github.com/myunitytools"
+    "url": "https://github.com/mygamedevtools"
   },
   "hideInEditor": false,
   "dependencies": {
