--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+        persist-credentials: false
     - name: Release
       uses: cycjimmy/semantic-release-action@v3.1.2
       with:
