--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.0",
+    "com.mygamedevtools.script-template": "3.3.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -37,5 +36,15 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.mygamedevtools.script-template",
+        "com.openupm"
+      ]
+    }
+  ]
 }
