--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,12 +3,12 @@
   "plugins": [                                                                               
     ["@semantic-release/commit-analyzer", { "preset": "angular" }],                          
     "@semantic-release/release-notes-generator",                                             
-    ["@semantic-release/changelog", { "preset": "angular" }],                                
+    ["@semantic-release/changelog", { "preset": "angular", "pkgRoot": "Packages/mygamedevtools-extensions"  }],                                
     ["@semantic-release/npm", { "npmPublish": false }],                      
     ["@semantic-release/git", {                                                              
-      "assets": ["package.json", "CHANGELOG.md"],                                            
-      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"  
+      "assets": ["Packages/mygamedevtools-extensions/package.json", "CHANGELOG.md"],                                            
+      "message": "ci(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"  
     }],                                                                                      
     "@semantic-release/github"                                                               
-  ]                                                                                          
+  ]
 }
