refactor: update namespaces and assemblies
BREAKING CHANGE: additional assemblies and namespaces created

Both GroupGameObjects and ScriptingDefineSymbolsHelper classes were moved to the MyGameDevTools.Tooling namespace and assembly. All the attributes have been moved to the MyGameDevTools.Attributes namespace and assembly.

--- a/Packages/mygamedevtools-extensions/Editor/PropertyDrawers/MyGameDevTools.Attributes.Editor.asmdef
+++ b/Packages/mygamedevtools-extensions/Editor/PropertyDrawers/MyGameDevTools.Attributes.Editor.asmdef
@@ -1,12 +1,10 @@
 {
-    "name": "MyGameDevTools.Extensions.Editor",
+    "name": "MyGameDevTools.Attributes.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:86cc26284feb78849ab751e241df0117"
+        "GUID:883381e107e31564e9f64c4ce3f824cd"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
