--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "com.mygamedevtools.script-template": "3.3.0",
-    "com.unity.feature.development": "1.0.1",
+    "com.unity.editorcoroutines": "1.0.0",
+    "com.unity.ide.rider": "3.0.18",
+    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.performance.profile-analyzer": "1.2.2",
+    "com.unity.testtools.codecoverage": "1.1.1",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.3",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
