refactor: update editor assemblies to editor only

--- a/Packages/mygamedevtools-extensions/Editor/PropertyDrawers/MyGameDevTools.Attributes.Editor.asmdef
+++ b/Packages/mygamedevtools-extensions/Editor/PropertyDrawers/MyGameDevTools.Attributes.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:883381e107e31564e9f64c4ce3f824cd"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
