--- a/Packages/mygamedevtools-extensions/Editor/Tooling/MyGameDevTools.Tooling.asmdef
+++ b/Packages/mygamedevtools-extensions/Editor/Tooling/MyGameDevTools.Tooling.asmdef
@@ -2,7 +2,9 @@
     "name": "MyGameDevTools.Tooling",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
